[package]
name = "alarm-base"
version = "0.0.1"
authors = ["Eliza Weisman <eliza@buoyant.io>"]
description = """
Base types and API definitions shared across ALARM allocators.
"""

[features]
default = ["lend"]
lend = []
std = []

[dependencies.spin]
version = "0.4.6"

[dependencies.hal9000]
git = "https://github.com/sos-os/hal9000.git"
