[package]
name = "alarm-test"
version = "0.0.1"
authors = ["Eliza Weisman <eliza@buoyant.io>"]
description = """
Tests for alarm-base.
"""

[dependencies.alarm-base]
path = "../alarm-base"

[dependencies.hal9000]
git = "https://github.com/sos-os/hal9000.git"

[dependencies.hal9000-derive]
git = "https://github.com/sos-os/hal9000.git"